# PhotonicTestDemo

./: .gitignore  pyproject.toml  startup.py  todo.md
_Executable/: Automation Examples.spec  build_exe.bat
ae/: __init__.py
ae/instrument_emulators/: __init__.py  instrument_base.py
ae/main/: main.py
ae/ui/: close_confirmation.py
analysisfromtoml/: __init__.py  analysis_from_toml.py  config.toml
analysisfromtoml/analysis_scripts/: __init__.py  liv_analysis.py
base_instrumentation/: central_control.py
base_instrumentation/instrument_emulators/: __init__.py  camera.py  communication.py  laser.py  power_meter.py  psu.py
base_instrumentation/instruments/: __init__.py  camera.py  power_meter.py  psu.py
email_notifier/: __init__.py  email_notifier.py
gui_resources/: __init__.py  console.py
gui_resources/functionality/: __init__.py  main_window.py
gui_resources/ui/: __init__.py  close_confirmation.py  console.py  main_window.py  sample_code.py
instruments/: __init__.py  central_control.py
instruments/instrument_emulators/: __init__.py  camera.py  communication.py  laser.py  power_meter.py  psu.py
instruments/instrument_wrappers/: __init__.py  camera.py  power_meter.py  psu.py
live_data_plotting/: __init__.py  script_loader.py
live_testing/: cw_liv.py  shortened_device_definition.csv
resources/: config.toml
resources/test_results/: W1234_F1-10_D1-100_20240925-122833.csv  (+9 more)
test_class/: __init__.py  test_class.py
test_results/: data20240924-181153.csv  data20240924-181428.csv
test_scripts/: cw_liv.py
testing/: __init__.py  test_class.py
(+52 files in other folders)
